--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,8 @@ jobs:
           name: "Run tests"
           background: true
           command: |
-            echo "TODO: Run rosetta-cli?"
+            cd rosetta/tests
+            go test
 
 workflows:
   version: 2
