--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,24 @@ jobs:
     steps:
       - checkout
       - run:
-          name: ""
+          name: "Prebuild"
+          command: |
+            go build main.go
+      - run:
+          name: "Launch proxy"
+          background: true
           command: |
             export LOTUS_RPC_URL=${LOTUS_RPC_URL_TESTNET}
             export LOTUS_RPC_TOKEN=${LOTUS_RPC_TOKEN_TESTNET}
             go run main.go
+      - run:
+          name: "Give time for the proxy to start"
+          command: sleep 3
+      - run:
+          name: "Run tests"
+          command: |
+            cd rosetta/tests
+            go test
 
 workflows:
   version: 2
