--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,35 @@ jobs:
             cd rosetta/tests
             go test
 
+  integration_rosetta_cli:
+    docker:
+      - image: golang:1.14
+    steps:
+      - checkout
+      - run:
+          name: "Prebuild"
+          command: |
+            go build main.go
+      - run:
+          name: "Launch proxy"
+          background: true
+          command: |
+            export LOTUS_RPC_URL=${LOTUS_RPC_URL_TESTNET}
+            export LOTUS_RPC_TOKEN=${LOTUS_RPC_TOKEN_TESTNET}
+            go run main.go
+      - run:
+          name: "Give time for the proxy to start"
+          command: sleep 3
+      - run:
+          name: "Run rosetta-cli tests"
+          command: |
+            cd rosetta/tests
+            ./rosetta_cli_test.sh
+
 workflows:
   version: 2
   build_all:
     jobs:
       - build
       - integration_testnet
+      - integration_rosetta_cli
