--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout
       - run: go build
-      - run: go test ./...
+      - run: go test ./rosetta/services
 
   checks:
     docker:
@@ -42,8 +42,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            cd rosetta/tests
-            go test
+            go test ./rosetta/tests
 
   integration_rosetta_cli:
     docker:
