--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
       - checkout
       - run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.27.0
+      - run:
+          name: "check go mod tidy"
+          command: |
+            go mod tidy
+            git diff --exit-code -- go.mod go.sum
       - run: golangci-lint --version
       - run: golangci-lint run -E gofmt -E gosec -E goconst -E gocritic
   #      - run: golangci-lint run -E gofmt -E gosec -E goconst -E godox -E gocritic
