--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     working_directory: /rosetta-filecoin-lib
     steps:
       - checkout
-      - run: go build
+      - run: make build
       - run: go test ./rosetta/services
 
   checks:
@@ -33,14 +33,14 @@ jobs:
       - run:
           name: "Prebuild"
           command: |
-            go build main.go
+            make build
       - run:
           name: "Launch proxy"
           background: true
           command: |
             export LOTUS_RPC_URL=${LOTUS_RPC_URL_TESTNET}
             export LOTUS_RPC_TOKEN=${LOTUS_RPC_TOKEN_TESTNET}
-            go run main.go
+            ./rosetta-filecoin-proxy
       - run:
           name: "Give time for the proxy to start"
           command: sleep 3
@@ -57,14 +57,14 @@ jobs:
       - run:
           name: "Prebuild"
           command: |
-            go build main.go
+            make build
       - run:
           name: "Launch proxy"
           background: true
           command: |
             export LOTUS_RPC_URL=${LOTUS_RPC_URL_TESTNET}
             export LOTUS_RPC_TOKEN=${LOTUS_RPC_TOKEN_TESTNET}
-            go run main.go
+            ./rosetta-filecoin-proxy
       - run:
           name: "Give time for the proxy to start"
           command: sleep 3
