--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,16 +24,10 @@ jobs:
     steps:
       - checkout
       - ffi_deps
-      - run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.27.0
-      - run:
-          name: "check go mod tidy"
-          command: |
-            go mod tidy
-            git diff --exit-code -- go.mod go.sum
+      - run: make install_lint
       - run: make build
-      - run: golangci-lint --version
-      - run: golangci-lint run -E gofmt -E gosec -E goconst -E gocritic
-  #      - run: golangci-lint run -E gofmt -E gosec -E goconst -E godox -E gocritic
+      - run: make check-modtidy
+      - run: make lint
 
   integration_testnet:
     docker:
