--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ commands:
     steps:
       - run: apt update && apt install -yy mesa-opencl-icd jq
       - run: ln -s /usr/lib/x86_64-linux-gnu/libOpenCL.so.1 /usr/lib/libOpenCL.so
-      - run: git submodule update --init --recursive --remote
+      - run: git submodule update --init --recursive
 
 jobs:
   build:
