--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - checkout
       - ffi_deps
       - run: make build
-      - run: go test -race ./rosetta/services
+      - run: make test
 
   checks:
     docker:
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            go test -race ./rosetta/tests
+            make test_integration
 
   integration_rosetta_cli:
     docker:
