--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
@@ -10,24 +8,20 @@ on:
   pull_request:
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  rosetta_cli:
     runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.3
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: '^1.14.3' # The Go version to download (if necessary) and use.
+      - run: git submodule update --init --recursive
+      - run: make build_CI
+      - run: |
+            export LOTUS_RPC_URL=ws://localhost:1234/rpc/v0
+            ./rosetta-filecoin-proxy&
+      - run: ./rosetta_cli_test_PR.sh
+        working-directory: ./rosetta/tests        
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
