--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 commands:
   ffi_deps:
     steps:
-      - run: apt update && apt install -yy mesa-opencl-icd jq
+      - run: apt update && apt install -yy mesa-opencl-icd jq hwloc libhwloc-dev
       - run: ln -s /usr/lib/x86_64-linux-gnu/libOpenCL.so.1 /usr/lib/libOpenCL.so
       - run: git submodule update --init --recursive
 
