--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: '^1.15.6' # The Go version to download (if necessary) and use.
       - run: git submodule update --init --recursive
-      - run: sudo apt update && sudo apt install -yy build-essential
+      - run: sudo apt update && sudo apt install -yy build-essential pkg-config
       - run: make build_CI
       - run: ./rosetta-filecoin-proxy&
         env:
