--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,13 @@ jobs:
       - uses: actions/setup-go@v2.1.3
         with:
           go-version: '^1.15.6' # The Go version to download (if necessary) and use.
-      - uses: secrethub/actions/env-export@v0.2.1
-        env:
-          LOTUS_RPC_URL: ${{ secrets.LOTUS_RPC_URL }}
       - run: git submodule update --init --recursive
       - run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - run: make build_CI
-      - run: ./rosetta-filecoin-proxy&
+      - name: Run proxy in background
+        run: ./rosetta-filecoin-proxy&
+        env:
+            LOTUS_RPC_URL: ${{ secrets.LOTUS_RPC_URL }}
       - run: ./rosetta_cli_test_PR.sh
         working-directory: ./rosetta/tests        
 
