--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         include:
           - network: mainnet
             url: LOTUS_RPC_URL
-          - network: butterfly
-            url: LOTUS_BUTTERFLY_RPC_URL
+          #- network: butterfly
+          #  url: LOTUS_BUTTERFLY_RPC_URL
           - network: calibration
             url: LOTUS_CALIBRATION_RPC_URL
 
