--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,26 @@ jobs:
           LOTUS_RPC_URL: ${{ secrets[matrix.url] }}
       - run: ./rosetta_cli_test_PR.sh ${{ matrix.network }}
         working-directory: ./rosetta/tests
+  build:
+    docker:
+      - image: golang:1.18
+    working_directory: /rosetta-filecoin-lib
+    steps:
+      - checkout
+      - ffi_deps
+      - run: make build
+      - run: make test
+
+  checks:
+    docker:
+      - image: golang:1.18
+    steps:
+      - checkout
+      - ffi_deps
+      - run: make install_lint
+      - run: make build_CI
+      - run: make check-modtidy
+      - run: make lint
 
 
 #    runs-on: self-hosted
