Added supported operations into networkapiservice struct

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         include:
 #          - network: mainnet
 #            url: LOTUS_RPC_URL
-          - network: butterfly
-            url: LOTUS_BUTTERFLY_RPC_URL
+#          - network: butterfly
+#            url: LOTUS_BUTTERFLY_RPC_URL
           - network: calibration
             url: LOTUS_CALIBRATION_RPC_URL
     runs-on: self-hosted
