--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,25 +11,23 @@ on:
 jobs:
   rosetta_cli:
     name: Rosetta CLI integration tests
-
     strategy:
       fail-fast: false
       matrix:
         include:
-          - network: mainnet
-            url: LOTUS_RPC_URL
+#          - network: mainnet
+#            url: LOTUS_RPC_URL
 #          - network: butterfly
 #            url: LOTUS_BUTTERFLY_RPC_URL
-#          - network: calibration
-#            url: LOTUS_CALIBRATION_RPC_URL
-
+          - network: calibration
+            url: LOTUS_CALIBRATION_RPC_URL
     runs-on: self-hosted
     timeout-minutes: 5760
     steps:
       - uses: actions/checkout@v2.3.3
       - uses: actions/setup-go@v2.1.3
         with:
-          go-version: '^1.17.5' # The Go version to download (if necessary) and use.
+          go-version: '^1.18' # The Go version to download (if necessary) and use.
       - run: git submodule update --init --recursive
       - run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - run: make build_CI
@@ -39,6 +37,22 @@ jobs:
           LOTUS_RPC_URL: ${{ secrets[matrix.url] }}
       - run: ./rosetta_cli_test_PR.sh ${{ matrix.network }}
         working-directory: ./rosetta/tests
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.18'
+      - name: Test
+        run: make test
+
+
+
 
 
 #    runs-on: self-hosted
