--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.20'
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - name: Test
         run: make test
 
