--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-#          - network: mainnet
-#            url: LOTUS_MAINNET_RPC_URL
-#          - network: devnet
-#            url: LOTUS_DEVNET_RPC_URL
+          #          - network: mainnet
+          #            url: LOTUS_MAINNET_RPC_URL
+          #          - network: devnet
+          #            url: LOTUS_DEVNET_RPC_URL
           - network: calibration
-            url: LOTUS_CALIBRATION_RPC_URL
+            url: ${{ secrets.LOTUS_URL_CALIBNET }}
     timeout-minutes: 120
     steps:
       - uses: actions/checkout@v3
