--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
   rosetta_cli:
     name: Rosetta CLI integration tests
-    runs-on: [self-hosted, linux, x64]
+    runs-on: zondax-runners
     needs: [ build ]
     strategy:
       fail-fast: false
