--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: zondax-runners
+    container:
+      image: golang:1.20
+      options: --tty
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -20,13 +23,16 @@ jobs:
         with:
           go-version: '1.20'
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
+        run: apt update && apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - name: Test
         run: make test
 
   rosetta_cli:
     name: Rosetta CLI integration tests
     runs-on: zondax-runners
+    container:
+      image: golang:1.20
+      options: --tty
     needs: [ build ]
     strategy:
       fail-fast: false
@@ -45,7 +51,7 @@ jobs:
         with:
           go-version: '1.20' # The Go version to download (if necessary) and use.
       - run: git submodule update --init --recursive
-      - run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
+      - run: apt update && apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - run: make build_CI
       - name: Run proxy in background
         run: ./rosetta-filecoin-proxy&
