Add safe directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Configure Safe Directory
+        run: git config --local --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
+
       - uses: actions/setup-go@v3
         with:
           go-version: '1.20'
