--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,9 @@ jobs:
         with:
           submodules: true
 
-      - name: Debugging - Print Working Directory
+      - name: Temporary Global Git Configuration
         run: |
-          pwd
-          ls -la
-          git status
-
-      - name: Configure Safe Directory
-        run: |
-          git config --local --add safe.directory $(pwd)
-          git config --local --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
+          git config --global --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
 
       - uses: actions/setup-go@v3
         with:
