--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,11 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.20' # The Go version to download (if necessary) and use.
+
+      - name: Temporary Global Git Configuration
+        run: |
+          git config --global --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
+
       - run: git submodule update --init --recursive
       - run: apt update && apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - run: make build_CI
