--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,21 @@ on:
 jobs:
   build:
     runs-on: zondax-runners
+    container:
+      image: golang:1.20
+      options: --tty
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: true
-      - uses: actions/setup-go@v3
-        with:
-          go-version: '1.20'
+
+      - name: Temporary Global Git Configuration
+        run: |
+          git config --global --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
+
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
+        run: apt update && apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - name: Test
         run: make test
 
@@ -40,12 +45,23 @@ jobs:
             url: LOTUS_CALIBRATION_RPC_URL
     timeout-minutes: 120
     steps:
+      - run: sudo apt update && sudo apt install -yy build-essential bzr git jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev curl
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.20' # The Go version to download (if necessary) and use.
+          go-version: '1.21' # The Go version to download (if necessary) and use.
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Temporary Global Git Configuration
+        run: |
+          git config --global --add safe.directory /__w/rosetta-filecoin-proxy/rosetta-filecoin-proxy
+
       - run: git submodule update --init --recursive
-      - run: sudo apt update && sudo apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
       - run: make build_CI
       - name: Run proxy in background
         run: ./rosetta-filecoin-proxy&
