Support lotus 1.28.0-rc4 (#234)
* Support lotus 1.28.0-rc4

* Update test config

* install cargo and rust

* fix ci

* try to fix ci

* Update tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,13 @@ jobs:
 
       - name: Install dependencies
         run: apt update && apt install -yy build-essential bzr jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+
       - name: Test
         run: make test
 
