--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,15 @@ updates:
       prefix-development: 'chore'
       include: 'scope'
     target-branch: master
+
+  # Enable version updates for GitHub Actions
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: 'daily'
+      time: '11:00'
+    commit-message:
+      prefix: 'chore'
+      prefix-development: 'chore'
+      include: 'scope'
+    target-branch: master
