tmp: force node

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
 #          - network: devnet
 #            url: LOTUS_DEVNET_RPC_URL
           - network: calibration
-            url: "https://node-fil-calibration-next-light.zondax.dev/rpc/v1"
+            url: LOTUS_CALIBRATION_RPC_URL
     timeout-minutes: 120
     steps:
       - run: sudo apt update && sudo apt install -yy build-essential bzr git jq pkg-config mesa-opencl-icd ocl-icd-opencl-dev hwloc libhwloc-dev curl
@@ -73,6 +73,7 @@ jobs:
       - name: Run proxy in background
         run: ./rosetta-filecoin-proxy&
         env:
-          LOTUS_RPC_URL: ${{ secrets[matrix.url] }}
+          # LOTUS_RPC_URL: ${{ secrets[matrix.url] }}
+          LOTUS_RPC_URL: "https://node-fil-calibration-next-light.zondax.dev/rpc/v1"
       - run: ./rosetta_cli_test_PR.sh ${{ matrix.network }}
         working-directory: ./rosetta/tests
